--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -52,10 +52,10 @@
       items: 
         - Honorable mention
         - Home training application using pose-estimation 
-    - title: 
+    - title: SU-Start Up
       institution: Sahmyook University
       year: 2020
-      items: SU-Start Up
+      items:
         - Excellence Award
         - Home training application using pose-estimation with social network
 
