--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -4,6 +4,7 @@ github_users:
 github_repos:
   - macarize/KETI_attr
   - macarize/CAM-PAR
+  - macarize/Assignments_miniProjects
   - macarize/VoiceHD
   - macarize/Container-OCR-with-level-correction
   - macarize/CRP-Container-Relocation-Problem-
