--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -16,7 +16,7 @@
         - 'Advisor: <a href="https://sites.google.com/view/kimki" style="color:black">KwangIn Kim</a>'
         - 'Thesis: CAM-PAR: Class Activation Map Guided Feature Disentanglement for Pedestrian Attribute Recognition'
     - title: Bachelor of Software
-      institution: Sahmyook University, Seoul, South Korea
+      institution: Ulsan National Instite of Science and Technology, Ulsan, South Korea
       year: 2017-2021
 
 - title: Experience
@@ -44,7 +44,7 @@
         - Honorable mention
         - Home training application using pose-estimation 
     - title: SU-Start Up
-      institution: Sahmyook University
+      institution: UNIST
       year: 2020
       items:
         - Excellence Award
